# bot-council

./: .gitattributes  .gitignore  ARCHITECTURE.md  BOT_AUTHORING.md  CLAUDE.md  Cargo.toml  INTEGRATIONS.md  MORNING-REPORT.md  README.md  clippy.toml
config/: default.toml
deploy/: bot-council-test-cleanup.service  bot-council-test-cleanup.timer  bot-council.service
docs/: RUNBOOK.md  deploy-clerk-auth-rollout.md  sentinels.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  vercel.json  vite.config.ts
migrations/: 20260415000001_init.sql  20260415000002_phase1.sql  20260415000003_phase1_5a.sql  20260415000004_citation_check.sql  20260416000001_bot_submission_cleanup.sql  20260416000002_admin_registry.sql  20260416000003_drop_legacy_bot_columns.sql  20260418000004_seen_user_identity_metadata.sql  20260419000001_responses_error_detail.sql  20260421000001_debate_archived_at.sql  20260422000001_text_only_bot_mode.sql  20260423000001_crux_and_resilience.sql  20260702000001_responses_ingest_kind.sql  20260702000002_system_events.sql
reference/: debate-endpoint-node.js  debate-endpoint-python.py  run-smoke-test.sh
scripts/: branch-cleanup.ps1  branch-preflight.ps1  check-auth-provider.sh  check-file-length.sh  check-runbook.sh  file-length-grandfather.txt  install-unit.sh  rollback.sh  ship.sh  sync-evo.sh  worktree-prune.sh
src/: cleanup.rs  config.rs  error.rs  lib.rs  main.rs  resynth.rs  resynth_targets.rs  sanitise.rs  scoreboard.rs  state.rs  types.rs
tests/: api_admins_test.rs  api_bots_test.rs  api_debates_test.rs  api_health_test.rs  (+7 more)
(+169 files in other folders)
